Fix TranslationServiceTest API compatibility issues